--- a/frontend/src/styles/welcome.css
+++ b/frontend/src/styles/welcome.css
@@ -15,3 +15,9 @@
   margin-top: 15%;
   box-shadow: 0px 0px 5px black;
 }
+.userName {
+  text-align: center;
+  font-size: 40px;
+  background-color: black;
+  color: aliceblue;
+}
