--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -1,12 +1,12 @@
 :root {
-  --principal: #fe7a36;
-  --secundatio: #3652ad;
-  --terciario: #280274;
-  --cuatiario: #e9f6ff;
+  --principal: #e8d8c4;
+  --secundatio: #c7b7a3;
+  --terciario: #6d2932;
+  --cuatiario: #561c24;
 }
 
 html {
-  background: linear-gradient(#3652ad71 30%, #280274b4 120%),
+  background: linear-gradient(rgba(0, 0, 0, 0.628) 60%, #3200002d 120%),
     url(../public/img/gym.jpg);
   background-repeat: no-repeat;
   background-size: cover;
