--- a/frontend/src/styles/articleMini.css
+++ b/frontend/src/styles/articleMini.css
@@ -1,19 +1,24 @@
+:root {
+  --principal: #e8d8c4;
+  --secundatio: #c7b7a3;
+  --terciario: #6d2932;
+  --cuatiario: #561c24;
+}
 .createArticle {
   margin: 20px;
 }
 .mini-article-container {
-  background-color: rgba(207, 214, 228, 0.188);
   margin: 20rem;
 
   .miniArticle {
     transition: 0.2s;
     margin: 2rem 5px 5px 5px;
-    border: 3px solid black;
+    border: 3px solid var(--cuatiario);
     padding: 10px;
     max-height: 20rem;
     min-height: 20rem;
     overflow: hidden;
-    background-color: rgb(13, 129, 230);
+    background-color: var(--secundatio);
     color: black;
     font-weight: 600;
 
