--- a/frontend/src/styles/welcome.css
+++ b/frontend/src/styles/welcome.css
@@ -1,8 +1,8 @@
 :root {
-  --principal: #fe7a36;
-  --secundatio: #3652ad;
-  --terciario: #280274;
-  --cuatiario: #e9f6ff;
+  --principal: #e8d8c4;
+  --secundatio: #c7b7a3;
+  --terciario: #6d2932;
+  --cuatiario: #561c24;
 }
 .titlee {
   font-family: "Rubik Burned", system-ui;
@@ -10,14 +10,14 @@
   font-style: normal;
   font-size: 8rem;
   color: var(--principal);
-  background-color: var(--secundatio);
   text-align: center;
   margin-top: 15%;
-  box-shadow: 0px 0px 5px black;
+  filter: brightness(2);
 }
 .userName {
+  margin-top: 50px;
   text-align: center;
-  font-size: 40px;
-  background-color: black;
-  color: aliceblue;
+  font-size: 20px;
+  filter: brightness(2);
+  color: var(--terciario);
 }
